[package]
name = "apex-qemu"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2
debug = true
panic = "abort"
lto = true


[features]
default = ["dev"]

# Enable developer features
dev = []

# Write debug logs when read/write memory fails
debug_api = []

git_pack = []

[dependencies]
crossbeam-channel = "*"

#apexdream = { path = "../apexdream" }
apexdream = { path = "D:/Driver/apexdream" }
kmbox_net = { path = "D:/Driver/kmbox_net" }

tokio = { version = "1.33.0", features = ["full"] }


dataview = "~1.0"
fmtools = { version = "0.1", features = ["obfstr"] }
format_xml = { version = "0.3", features = ["obfstr"] }
obfstr = "0.4"
cvar = { version = "0.4.1" }
intptr = { version = "0.1.6", features = ["serde", "dataview_1"] }
ini_core = "0.2.0"
bitset-core = { git = "https://github.com/CasualX/bitset-core" }
vgc = { git = "https://github.com/CasualX/vgcolors" }
named_constants = "0.2"
pelite = { version = "0.10", features = ["unstable"] }

pretty-hex = "0.4.1"
memprocfs = "5.8.14"
libc = "0.2.153"

egui_overlay = { path = "D:/Driver/egui_overlay" }
egui_backend = "0.4"
egui_window_glfw_passthrough = "0.4"
egui_render_three_d = "0.4"

egui = { version = "0.26", default-features = false }
mouse-rs = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

winapi = { version = "0.3.9", features = [
    "consoleapi",
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "profileapi",
    "psapi",
    "synchapi",
    "tlhelp32",
    "winbase",
    "wingdi",
    "winerror",
    "winuser",
] }

[dev-dependencies]
external = { git = "https://github.com/CasualX/external" }


